--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   webview_flutter_android: ^3.16.4
   webview_flutter_wkwebview: ^3.13.1
   connectivity_plus: ^3.0.3
+  fluttertoast: ^8.0.9
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +58,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
